# AIAgentFlows

./: README.md  local_db.db  pyproject.toml
1. simple_example/: server.py
2. link_to_sqlite/: initialize_db.py  server.py  test.ipynb
2_link_to_sqlite/: initialize_db.py  local_db.db  server.py  test.ipynb
3_prompts/: server.py
client_sever_test/: client_llm.py  client_no_llm.py  llm_client.py  simple_client.py  web_search.py
handle_resources/: server.py  test.ipynb
