[project]
name = "aiagentflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "browser-use>=0.1.40",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "mcp[cli]>=1.5.0",
    "openai>=1.70.0",
]
